--- a/src/xbuild/SimulationFrame.form
+++ b/src/xbuild/SimulationFrame.form
@@ -225,7 +225,7 @@
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="jXPanel12" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="275" max="32767" attributes="0"/>
+                      <EmptySpace pref="283" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -385,7 +385,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jXPanel13" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="291" max="32767" attributes="0"/>
+                      <EmptySpace pref="295" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -460,9 +460,9 @@
                                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                   <Component id="rdWATER_N" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <Component id="cbCO2" alignment="0" pref="380" max="32767" attributes="0"/>
+                              <Component id="cbCO2" alignment="0" min="-2" pref="331" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace max="-2" attributes="0"/>
+                          <EmptySpace pref="55" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -518,10 +518,10 @@
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="cbCO2" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jXLabel15" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="cbCO2" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace max="32767" attributes="0"/>
+                          <EmptySpace pref="12" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -700,16 +700,7 @@
                     <Property name="text" type="java.lang.String" value="&lt;html&gt;CO&lt;sub&gt;2&lt;/sub&gt;&lt;/html&gt;"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JComboBox" name="cbCO2">
-                  <Properties>
-                    <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                      <StringArray count="3">
-                        <StringItem index="0" value="Use default value (380 vpm)"/>
-                        <StringItem index="1" value="&lt;html&gt;Actual CO&lt;sub&gt;2&lt;/sub&gt;;Mauna Loa, Hawaii (Keeling Curve)&lt;html&gt;"/>
-                        <StringItem index="2" value="Read from weather file"/>
-                      </StringArray>
-                    </Property>
-                  </Properties>
+                <Component class="xbuild.Components.XDropdownTableComboBox" name="cbCO2">
                 </Component>
               </SubComponents>
             </Container>
@@ -1081,7 +1072,7 @@
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="jXPanel15" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace pref="199" max="32767" attributes="0"/>
+                              <EmptySpace pref="207" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                     </DimensionLayout>
@@ -1720,12 +1711,15 @@
                       <Properties>
                         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                            <TitledBorder title="Fertilization">
+                            <TitledBorder title="Fertilizer">
                               <Font PropertyName="font" name="Tahoma" size="11" style="1"/>
                             </TitledBorder>
                           </Border>
                         </Property>
                       </Properties>
+                      <AccessibilityProperties>
+                        <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="Fertilizer"/>
+                      </AccessibilityProperties>
 
                       <Layout>
                         <DimensionLayout dim="0">
