--- a/src/xbuild/GeneralInfoFrame.form
+++ b/src/xbuild/GeneralInfoFrame.form
@@ -49,7 +49,7 @@
               <Component id="jXPanel2" min="-2" max="-2" attributes="1"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jXPanel3" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="72" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -99,11 +99,18 @@
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="cbFileType" alignment="0" min="-2" pref="148" max="-2" attributes="1"/>
-                              <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                                  <Component id="txtExperimentNumber" alignment="0" pref="77" max="32767" attributes="0"/>
-                                  <Component id="txtYear" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="txtSiteCode" alignment="0" max="32767" attributes="1"/>
-                                  <Component id="txtInstituteCode" alignment="0" max="32767" attributes="1"/>
+                              <Group type="102" alignment="0" attributes="0">
+                                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                                      <Component id="txtExperimentNumber" alignment="0" pref="77" max="32767" attributes="0"/>
+                                      <Component id="txtYear" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="txtSiteCode" alignment="0" max="32767" attributes="1"/>
+                                      <Component id="txtInstituteCode" alignment="0" max="32767" attributes="1"/>
+                                  </Group>
+                                  <EmptySpace max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Component id="jXLabel21" min="-2" max="-2" attributes="0"/>
+                                      <Component id="jXLabel28" min="-2" max="-2" attributes="0"/>
+                                  </Group>
                               </Group>
                           </Group>
                           <EmptySpace max="32767" attributes="0"/>
@@ -137,6 +144,7 @@
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="jXLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="txtInstituteCode" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jXLabel21" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <Component id="jLabel4" alignment="1" min="-2" max="-2" attributes="0"/>
                           </Group>
@@ -145,6 +153,7 @@
                               <Component id="txtSiteCode" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jXLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="jXLabel28" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
@@ -316,6 +325,16 @@
           <Events>
             <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="txtExperimentNumberStateChanged"/>
           </Events>
+        </Component>
+        <Component class="org.jdesktop.swingx.JXLabel" name="jXLabel21">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Please enter 2 Characters"/>
+          </Properties>
+        </Component>
+        <Component class="org.jdesktop.swingx.JXLabel" name="jXLabel28">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Please enter 2 Characters"/>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
