--- a/src/xbuild/InitialConditionFrame.form
+++ b/src/xbuild/InitialConditionFrame.form
@@ -748,8 +748,8 @@
                       <Table columnCount="4" rowCount="0">
                         <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;Depth&lt;br&gt;base of layer&lt;br&gt;cm&lt;/p&gt;&lt;/html&gt;" type="java.lang.Float"/>
                         <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;Volumetric Water&lt;br&gt;cm&lt;sup&gt;3&lt;/sup&gt; cm-3&lt;/p&gt;&lt;/html&gt;" type="java.lang.Float"/>
-                        <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;Ammonium (NH&lt;sub&gt;4&lt;/sub&gt;)&lt;br&gt;g[N] Mg-1 [soil]&lt;/p&gt;&lt;/html&gt;" type="java.lang.Float"/>
-                        <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;Nitrate (NO&lt;sub&gt;3&lt;/sub&gt;)&lt;br&gt;g[N] Mg-1 [soil]&lt;/p&gt;&lt;/html&gt;" type="java.lang.Float"/>
+                        <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;Ammonium (NH&lt;sub&gt;4&lt;/sub&gt;)&lt;br&gt;g[N] Mg&lt;sup&gt;-1&lt;/sup&gt; [soil]&lt;/p&gt;&lt;/html&gt;" type="java.lang.Float"/>
+                        <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;Nitrate (NO&lt;sub&gt;3&lt;/sub&gt;)&lt;br&gt;g[N] Mg&lt;sup&gt;-1&lt;/sup&gt; [soil]&lt;/p&gt;&lt;/html&gt;" type="java.lang.Float"/>
                       </Table>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
