--- a/src/xbuild/InitialDialog.form
+++ b/src/xbuild/InitialDialog.form
@@ -167,12 +167,12 @@
     </Component>
     <Component class="org.jdesktop.swingx.JXLabel" name="jXLabel7">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Mg-1 [soil]"/>
+        <Property name="text" type="java.lang.String" value="&lt;html&gt;Mg&lt;sup&gt;-1&lt;/sup&gt; [soil]&lt;/html&gt;"/>
       </Properties>
     </Component>
     <Component class="org.jdesktop.swingx.JXLabel" name="jXLabel8">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Mg-1 [soil]"/>
+        <Property name="text" type="java.lang.String" value="&lt;html&gt;Mg&lt;sup&gt;-1&lt;/sup&gt; [soil]&lt;/html&gt;"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="bnOK">
